Added some basic visualisation on Google Earth

--- a/Example 21 - Automatically generated sites and activities.ipynb
+++ b/Example 21 - Automatically generated sites and activities.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,39 +433,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Generarate stock sites\n",
+    "Sites = []\n",
+    "# *** Generate stock sites\n",
     "# - sites in database\n",
     "data_stock_01 = {\"env\": env,\n",
-    "                \"name\": \"Stock 01\", \"geometry\": geojson.Point([52.94239823421129, 5.019298185633251]),\n",
+    "                \"name\": \"Stock 01\", \"geometry\": geojson.Point([5.019298185633251, 52.94239823421129]),\n",
     "                \"capacity\": 150000, \"level\": 150000}\n",
     "data_stock_02 = {\"env\": env,\n",
-    "                \"name\": \"Stock 02\", \"geometry\": geojson.Point([52.94239823421129, 5.019298185633251]),\n",
+    "                \"name\": \"Stock 02\", \"geometry\": geojson.Point([5.019298185633251, 52.94239823421129]),\n",
     "                \"capacity\": 150000, \"level\": 150000}\n",
     "data_stock_03 = {\"env\": env,\n",
-    "                \"name\": \"Stock 03\", \"geometry\": geojson.Point([52.94239823421129, 5.019298185633251]),\n",
+    "                \"name\": \"Stock 03\", \"geometry\": geojson.Point([5.019298185633251, 52.94239823421129]),\n",
     "                \"capacity\": 150000, \"level\": 150000}\n",
     "data_stock_04 = {\"env\": env,\n",
-    "                \"name\": \"Stock 04\", \"geometry\": geojson.Point([52.94239823421129, 5.019298185633251]),\n",
+    "                \"name\": \"Stock 04\", \"geometry\": geojson.Point([5.019298185633251, 52.94239823421129]),\n",
     "                \"capacity\": 150000, \"level\": 150000}\n",
     "\n",
     "# - create site objects\n",
     "stock_01 = Site(**data_stock_01)\n",
+    "Sites.append(stock_01)\n",
     "stock_02 = Site(**data_stock_02)\n",
+    "Sites.append(stock_02)\n",
     "stock_03 = Site(**data_stock_03)\n",
+    "Sites.append(stock_03)\n",
     "stock_04 = Site(**data_stock_04)\n",
+    "Sites.append(stock_04)\n",
     "\n",
     "# *** Generate placemnet sites\n",
-    "start = [52.93917167503315, 5.070195628786471] # Den Oever\n",
-    "stop = [53.0229621352376,  5.197016484858931]  # Breezanddijk\n",
-    "nums = 10\n",
+    "start = [5.051984474450297,52.9389114955695] # Den Oever \n",
+    "#stop = [5.201697426528369,53.01679552959467] # Breezanddijk \n",
+    "stop = [5.294441318495398,53.06556661924486] # Kornwerderzand\n",
+    "nums = 20\n",
     "\n",
     "# - generate a 'nums' amount of sites between the selected start and stop points\n",
-    "lats = np.linspace(start[0], start[1], num=nums)\n",
-    "lons = np.linspace(stop[0],  stop[1],  num=nums)\n",
+    "lats = np.linspace(start[0], stop[0], num=nums)\n",
+    "lons = np.linspace(start[1], stop[1],  num=nums)\n",
     "\n",
     "# - option to create a range of sites between two points\n",
     "for i in range(nums):\n",
@@ -475,25 +481,15 @@
     "                \"capacity\": 5000, \"level\": 0}\n",
     "    \n",
     "    # - create site objects\n",
-    "    vars()['Site_' + \"KP\" + format(i,'02.0f')] = Site(**data_site)\n"
+    "    vars()['Site_' + \"KP\" + format(i,'02.0f')] = Site(**data_site)\n",
+    "    Sites.append(vars()['Site_' + \"KP\" + format(i,'02.0f')])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'resource': <simpy.resources.resource.Resource object at 0x000002652993C8D0>, 'origin': <__main__.Site object at 0x0000026529939B38>, 'destination': <__main__.Site object at 0x0000026529939B38>, 'rate': 0.1, 'amount': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [52.94239823421129, 5.019298185633251], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x00000265271B6438>, 'name': 'Gantry crane', 'id': '179c6634-8941-11e8-9ff4-60f677ba2ce0'}\n",
-      "{'origin': <__main__.Site object at 0x0000026529939B38>, 'destination': <__main__.Site object at 0x0000026529939B38>, 'v_empty': 1.5, 'v_full': 1, 'resource': <simpy.resources.resource.Resource object at 0x000002652993C6A0>, 'container': <simpy.resources.container.Container object at 0x000002652993CB00>, 'total_requested': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [52.93917167503315, 5.070195628786471], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x00000265271B6438>, 'name': 'Transport barge 01', 'id': '179c6636-8941-11e8-8273-60f677ba2ce0'}\n",
-      "{'origin': <__main__.Site object at 0x0000026529939B38>, 'destination': <__main__.Site object at 0x0000026529939B38>, 'v_empty': 1.5, 'v_full': 1, 'resource': <simpy.resources.resource.Resource object at 0x000002652993C668>, 'container': <simpy.resources.container.Container object at 0x000002652993CAC8>, 'total_requested': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [52.93917167503315, 5.070195628786471], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x00000265271B6438>, 'name': 'Transport barge 02', 'id': '179c6637-8941-11e8-aacd-60f677ba2ce0'}\n",
-      "{'resource': <simpy.resources.resource.Resource object at 0x000002652993C9E8>, 'origin': <__main__.Site object at 0x0000026529939B38>, 'destination': <__main__.Site object at 0x0000026529939B38>, 'rate': 0.05, 'amount': 0, 'log': [], 't': [], 'value': [], 'geometry': {\"coordinates\": [53.0229621352376, 5.197016484858931], \"type\": \"Point\"}, 'env': <simpy.core.Environment object at 0x00000265271B6438>, 'name': 'Installation crane', 'id': '179c6635-8941-11e8-9ebf-60f677ba2ce0'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# *** Define fleet\n",
     "\n",
@@ -532,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,81 +559,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T=000.00 Condition: Site_KP00.container.level<5000 is satisfied\n",
-      "T=000.00 Block placement to KP00 started\n",
-      "T=000.00 Block placement to KP01 suspended\n",
-      "T=000.00 Block placement to KP02 suspended\n",
-      "T=000.00 Block placement to KP03 suspended\n",
-      "T=000.00 Block placement to KP04 suspended\n",
-      "T=000.00 Block placement to KP05 suspended\n",
-      "T=000.00 Block placement to KP06 suspended\n",
-      "T=000.00 Block placement to KP07 suspended\n",
-      "T=000.00 Block placement to KP08 suspended\n",
-      "T=000.00 Block placement to KP09 suspended\n",
-      "Loading:\n",
-      "  Stock 01 contains: 149000\n",
-      "  Transport barge 01 contains: 1000\n",
-      "  KP00 contains: 0\n",
-      "  sailing full: 1 m/s\n",
-      "Unloading:\n",
-      "  Stock 01 contains: 149000\n",
-      "  Transport barge 01 contains: 0\n",
-      "  KP00 contains: 1000\n",
-      "  sailing empty: 1.5 m/s\n",
-      "Loading:\n",
-      "  Stock 01 contains: 148000\n",
-      "  Transport barge 01 contains: 1000\n",
-      "  KP00 contains: 1000\n",
-      "  sailing full: 1 m/s\n",
-      "Unloading:\n",
-      "  Stock 01 contains: 148000\n",
-      "  Transport barge 01 contains: 0\n",
-      "  KP00 contains: 2000\n",
-      "  sailing empty: 1.5 m/s\n",
-      "Loading:\n",
-      "  Stock 01 contains: 147000\n",
-      "  Transport barge 01 contains: 1000\n",
-      "  KP00 contains: 2000\n",
-      "  sailing full: 1 m/s\n",
-      "Unloading:\n",
-      "T=50400.00 Condition: Site_KP01.container.level<5000 and Site_KP00.container.level>=3000 is satisfied\n",
-      "T=50400.00 Block placement to KP01 started\n",
-      "Loading:\n",
-      "  Stock 01 contains: 146000\n",
-      "  Transport barge 01 contains: 1000\n",
-      "  KP00 contains: 3000\n",
-      "  sailing full: 1 m/s\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-30-58c37bd0849a>\u001b[0m in \u001b[0;36minstallation_process_control\u001b[1;34m(self, env, condition, origin, destination, loader, mover, unloader)\u001b[0m\n\u001b[0;32m     69\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'T='\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'{:06.2f}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' '\u001b[0m\u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' to '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mdestination\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' started'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 70\u001b[1;33m         \u001b[1;32mwhile\u001b[0m \u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcondition\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     71\u001b[0m             yield from self.installation_process(env, condition,\n",
-      "\u001b[1;32m<string>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: ",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-0e79e1385170>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#*** Run the project\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\users\\mrv\\appdata\\local\\continuum\\miniconda3\\lib\\site-packages\\simpy\\core.py\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, until)\u001b[0m\n\u001b[0;32m    135\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    136\u001b[0m             \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 137\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    138\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mStopSimulation\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mexc\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    139\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mexc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m  \u001b[1;31m# == until.value\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\mrv\\appdata\\local\\continuum\\miniconda3\\lib\\site-packages\\simpy\\core.py\u001b[0m in \u001b[0;36mstep\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    227\u001b[0m             \u001b[0mexc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mevent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mevent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    228\u001b[0m             \u001b[0mexc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__cause__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mevent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 229\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mexc\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#*** Run the project\n",
     "env.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Some basic visualisation on Google Earth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from simplekml import Kml, Style\n",
+    "\n",
+    "kml = Kml()\n",
+    "\n",
+    "fol = kml.newfolder(name=\"A Folder\")\n",
+    "\n",
+    "sharedstyle = Style()\n",
+    "sharedstyle.labelstyle.color = 'ffffffff'  # White\n",
+    "sharedstyle.labelstyle.scale = 1  \n",
+    "sharedstyle.iconstyle.color = 'ffff0000'  # Blue\n",
+    "sharedstyle.iconstyle.scale = 1  \n",
+    "sharedstyle.iconstyle.icon.href = 'http://maps.google.com/mapfiles/kml/shapes/placemark_circle.png'\n",
+    "\n",
+    "for site in Sites:\n",
+    "    pnt = fol.newpoint(name=site.name, coords=[site.geometry[\"coordinates\"]])\n",
+    "    pnt.timespan.begin = \"2011-02-20\"\n",
+    "    pnt.timespan.end = \"2012-07-31\"\n",
+    "    pnt.style = sharedstyle                \n",
+    "\n",
+    "kml.save(\"sharedstyle.kml\")"
    ]
   },
   {
@@ -653,6 +615,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
