--- a/Example 21 - Automatically generated sites and activities.ipynb
+++ b/Example 21 - Automatically generated sites and activities.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Remaining issues:\n",
+    "## Need to haves:\n",
+    "- distance between geometries is in degrees, we need it in meters to determine sailing durations\n",
+    "- need to check resource requests closely to check why sharing ships isn't working yet \n",
+    "- need to add real time (plus a specific starting date)\n",
+    "- need to add logging to Sites to lists volumes at different timesteps (this helps to animate on Google Earth)\n",
+    "- need to add sensitivity to weather (see work Joris den Uijl)\n",
+    "- need to add soil characteristics and turbidity generation (see work Joris den Uijl)\n",
+    "\n",
+    "## Nice to haves:\n",
+    "- need to add routing via routing graph (Dijkstra algorithm)\n",
+    "- need to make case handling web based (quick setup & quick case comparison)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Create necessary classes"
    ]
   },
@@ -111,14 +129,11 @@
     "    resource: a simpy resource that can be requested\"\"\"\n",
     "    \n",
     "    def __init__(self, \n",
-    "                 origin, destination,\n",
     "                 v_empty=1.5, v_full=1, \n",
     "                 nr_resources=1,\n",
     "                 *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "        \"\"\"Initialization\"\"\"\n",
-    "        self.origin = origin\n",
-    "        self.destination = destination\n",
     "        self.v_empty = v_empty \n",
     "        self.v_full = v_full \n",
     "        self.resource = simpy.Resource(env, capacity=nr_resources)\n",
@@ -126,17 +141,37 @@
     "    def execute_move(self, origin, destination):\n",
     "        \"\"\"determine distance between origin and destination, and\n",
     "        yield the time it takes to travel it\"\"\"\n",
-    "        origin = shapely.geometry.asShape(self.origin.geometry)\n",
-    "        destination = shapely.geometry.asShape(self.destination.geometry)\n",
-    "        distance = origin.distance(destination) \n",
+    "        orig = shapely.geometry.asShape(origin.geometry)\n",
+    "        dest = shapely.geometry.asShape(destination.geometry)\n",
+    "        distance = orig.distance(dest) \n",
+    "        \n",
+    "        from math import sin, cos, sqrt, atan2, radians\n",
+    "        # approximate radius of earth in km\n",
+    "        R = 6373.0\n",
+    "\n",
+    "        lat1 = radians(origin.geometry[\"coordinates\"][0])\n",
+    "        lon1 = radians(origin.geometry[\"coordinates\"][1])\n",
+    "        lat2 = radians(destination.geometry[\"coordinates\"][0])\n",
+    "        lon2 = radians(destination.geometry[\"coordinates\"][1])\n",
+    "\n",
+    "        dlon = lon2 - lon1\n",
+    "        dlat = lat2 - lat1\n",
+    "\n",
+    "        a = sin(dlat / 2)**2 + cos(lat1) * cos(lat2) * sin(dlon / 2)**2\n",
+    "        c = 2 * atan2(sqrt(a), sqrt(1 - a))\n",
+    "        distance = (R * c) * 1000 # in m\n",
     "\n",
     "        if self.container.level == self.container.capacity:\n",
     "            yield self.env.timeout(distance / self.v_full)\n",
-    "            print('  sailing full: ' + str(self.v_full) + ' m/s')\n",
+    "            print('  distance full:  ' + '%4.2f' % (distance) + ' m')\n",
+    "            print('  sailing full:   ' + '%4.2f' % (self.v_full) + ' m/s')\n",
+    "            print('  duration:       ' + '%4.2f' % ((distance / self.v_full)/3600) + ' hrs')\n",
     " \n",
     "        elif self.container.level == 0:\n",
     "            yield self.env.timeout(distance / self.v_empty)\n",
-    "            print('  sailing empty: ' + str(self.v_empty) + ' m/s')\n",
+    "            print('  distance empty: ' + '%4.2f' % (distance) + ' m')\n",
+    "            print('  sailing empty:  ' + '%4.2f' % (self.v_empty) + ' m/s')\n",
+    "            print('  duration:       ' + '%4.2f' % ((distance / self.v_empty)/3600) + ' hrs')\n",
     " "
    ]
   },
@@ -157,13 +192,11 @@
     "\n",
     "    def __init__(self, \n",
     "                 nr_resources,\n",
-    "                 origin, destination, rate, amount=0,\n",
+    "                 rate, amount=0,\n",
     "                 *args, **kwargs):\n",
     "        super().__init__(*args, **kwargs)\n",
     "        \"\"\"Initialization\"\"\"\n",
     "        self.resource = simpy.Resource(env, capacity=nr_resources)\n",
-    "        self.origin=origin\n",
-    "        self.destination=destination\n",
     "        self.rate=rate\n",
     "        self.amount=amount\n",
     "        \n",
@@ -348,9 +381,12 @@
     "                                   origin, destination,\n",
     "                                   loader, mover, unloader):\n",
     "        \"\"\"Installation process\"\"\"\n",
+    "        # estimate amount that should be transported\n",
     "        amount = min(\n",
     "            mover.container.capacity - mover.container.level,\n",
-    "            destination.container.capacity - destination.container.level)\n",
+    "            origin.container.capacity - origin.total_requested,\n",
+    "            destination.container.capacity - destination.container.level,\n",
+    "            destination.container.capacity - destination.total_requested)\n",
     "\n",
     "        if amount>0:\n",
     "            # request access to the load_resource\n",
@@ -367,9 +403,9 @@
     " \n",
     "                loader.resource.release(my_load_resource_turn)\n",
     "\n",
-    "                print('  ' + origin.name + ' contains: ' + str(origin.container.level))\n",
-    "                print('  ' + mover.name + ' contains: ' + str(mover.container.level))\n",
-    "                print('  ' + destination.name + ' contains: ' + str(destination.container.level))\n",
+    "                print('  from: ' + origin.name + ' contains: ' + str(origin.container.level))\n",
+    "                print('  by:   ' + mover.name + ' contains: ' + str(mover.container.level))\n",
+    "                print('  to:   ' + destination.name + ' contains: ' + str(destination.container.level))\n",
     " \n",
     "            # request access to the transport_resource\n",
     "            with mover.resource.request() as my_mover_turn:\n",
@@ -390,18 +426,15 @@
     "\n",
     "                    unloader.resource.release(my_unloader_turn)\n",
     "\n",
-    "                    print('  ' + origin.name + ' contains: ' + str(origin.container.level))\n",
-    "                    print('  ' + mover.name + ' contains: ' + str(mover.container.level))\n",
-    "                    print('  ' + destination.name + ' contains: ' + str(destination.container.level))\n",
-    "\n",
-    "#            # request access to the transport_resource\n",
-    "#            with mover.resource.request() as my_mover_turn:\n",
-    "#                yield my_mover_turn\n",
+    "                    print('  from: ' + destination.name + ' contains: ' + str(destination.container.level))\n",
+    "                    print('  by:   ' + mover.name + ' contains: ' + str(mover.container.level))\n",
+    "                    print('  to:   ' + origin.name + ' contains: ' + str(origin.container.level))\n",
     "\n",
     "                mover.log_entry('sailing full start', self.env.now, mover.container.level)\n",
     "                yield from mover.execute_move(destination, origin)\n",
     "                mover.log_entry('sailing full stop', self.env.now, mover.container.level)\n",
-    "\n",
+    "                \n",
+    "                # once a mover is assigned to an Activity it completes a full cycle\n",
     "                mover.resource.release(my_mover_turn)\n"
    ]
   },
@@ -429,6 +462,13 @@
    "source": [
     "# *** Create a project environment\n",
     "env = simpy.Environment()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define sites"
    ]
   },
   {
@@ -486,6 +526,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define equipment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -497,18 +544,18 @@
     "# - processing resources\n",
     "data_gantry_crane = {\"env\": env,\n",
     "                \"name\": \"Gantry crane\", \"geometry\": geojson.Point([52.94239823421129, 5.019298185633251]),\n",
-    "                \"origin\": stock_01, \"destination\": stock_01, \"rate\": 0.10, \"nr_resources\": 1}\n",
+    "                \"rate\": 0.10, \"nr_resources\": 1}\n",
     "data_installation_crane = {\"env\": env,\n",
     "                \"name\": \"Installation crane\", \"geometry\": geojson.Point([53.0229621352376,  5.197016484858931]),\n",
-    "                \"origin\": stock_01, \"destination\": stock_01, \"rate\": 0.05, \"nr_resources\": 1}\n",
+    "                \"rate\": 0.05, \"nr_resources\": 1}\n",
     "\n",
     "# - transport resources\n",
     "data_transport_barge_01 = {\"env\": env,\n",
     "                \"name\": \"Transport barge 01\", \"geometry\": geojson.Point([52.93917167503315, 5.070195628786471]),\n",
-    "                \"capacity\": 1000, \"level\": 0, \"nr_resources\": 1, \"origin\": stock_01, \"destination\": stock_01}\n",
+    "                \"capacity\": 1000, \"level\": 0, \"nr_resources\": 1}\n",
     "data_transport_barge_02 = {\"env\": env,\n",
     "                \"name\": \"Transport barge 02\", \"geometry\": geojson.Point([52.93917167503315, 5.070195628786471]),\n",
-    "                \"capacity\": 1000, \"level\": 0, \"nr_resources\": 1, \"origin\": stock_01, \"destination\": stock_01}\n",
+    "                \"capacity\": 1000, \"level\": 0, \"nr_resources\": 1}\n",
     "\n",
     "# create site objects\n",
     "# - processing resources\n",
@@ -520,10 +567,17 @@
     "transport_barge_02 = Transport_Resource(**data_transport_barge_02)\n",
     "\n",
     "# print the outputs\n",
-    "print(gantry_crane.__dict__)\n",
-    "print(transport_barge_01.__dict__)\n",
-    "print(transport_barge_02.__dict__)\n",
-    "print(installation_crane.__dict__)\n"
+    "# print(gantry_crane.__dict__)\n",
+    "# print(transport_barge_01.__dict__)\n",
+    "# print(transport_barge_02.__dict__)\n",
+    "# print(installation_crane.__dict__)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define activities"
    ]
   },
   {
@@ -532,7 +586,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Define activties\n",
+    "# *** Define activities\n",
     "\n",
     "for i in range(nums):\n",
     "    # - sites in database (nr i indicates km's from Den Oever haven)\n",
@@ -545,7 +599,7 @@
     "                \"condition\": eval(condition)}\n",
     "    else:\n",
     "        condition = \"'''\" + eval(\"'''Site_KP\" + format(i,'02.0f') + \".container.level<5000'''\") + \\\n",
-    "                    ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + \".container.level>=3000'''\") + \"'''\"\n",
+    "                    ' and ' + eval(\"'''Site_KP\" + format(i-1,'02.0f') + \".container.level>=5000'''\") + \"'''\"\n",
     "        data_act = {\"env\": env,\n",
     "                \"name\": \"Block placement\",\n",
     "                \"origin\": stock_01, \"destination\": vars()['Site_' + \"KP\" + format(i,'02.0f')],\n",
@@ -555,6 +609,13 @@
     "    # - create site objects\n",
     "    vars()['Act_' + format(i,'02.0f')] = Installation(**data_act)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Run simulation"
    ]
   },
   {
@@ -571,7 +632,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Some basic visualisation on Google Earth"
+    "## Some basic visualisation on Google Earth"
    ]
   },
   {
@@ -601,13 +662,6 @@
     "\n",
     "kml.save(\"sharedstyle.kml\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
