Finalised working version (one layer)

--- a/Example 21 - Automatically generated sites and activities.ipynb
+++ b/Example 21 - Automatically generated sites and activities.ipynb
@@ -477,7 +477,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env.epoch = datetime.datetime.now()\n"
+    "# simulation returns time in seconds with epoch as the reference\n",
+    "env.epoch = datetime.datetime.now()"
    ]
   },
   {
@@ -500,13 +501,13 @@
     "                \"name\": \"Stock 01\", \"geometry\": geojson.Point([5.019298185633251, 52.94239823421129]),\n",
     "                \"capacity\": 150000, \"level\": 150000}\n",
     "data_stock_02 = {\"env\": env,\n",
-    "                \"name\": \"Stock 02\", \"geometry\": geojson.Point([5.019298185633251, 52.94239823421129]),\n",
+    "                \"name\": \"Stock 02\", \"geometry\": geojson.Point([5.919298185633251, 52.94239823421129]),\n",
     "                \"capacity\": 150000, \"level\": 150000}\n",
     "data_stock_03 = {\"env\": env,\n",
-    "                \"name\": \"Stock 03\", \"geometry\": geojson.Point([5.019298185633251, 52.94239823421129]),\n",
+    "                \"name\": \"Stock 03\", \"geometry\": geojson.Point([5.919298185633251, 52.94239823421129]),\n",
     "                \"capacity\": 150000, \"level\": 150000}\n",
     "data_stock_04 = {\"env\": env,\n",
-    "                \"name\": \"Stock 04\", \"geometry\": geojson.Point([5.019298185633251, 52.94239823421129]),\n",
+    "                \"name\": \"Stock 04\", \"geometry\": geojson.Point([5.919298185633251, 52.94239823421129]),\n",
     "                \"capacity\": 150000, \"level\": 150000}\n",
     "\n",
     "# - create site objects\n",
@@ -651,19 +652,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for site in Sites:\n",
-    "    print(site.container.level)\n",
-    "\n",
-    "print('project duration: ' + str(env.now/3600) + ' hrs')\n",
-    "print('old: ' + '807.8218240755122 hrs')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -676,10 +664,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "icon = 'http://maps.google.com/mapfiles/kml/shapes/donut.png'\n",
+    "size = 1\n",
     "\n",
     "kml = Kml()\n",
-    "\n",
     "fol = kml.newfolder(name=\"A Folder\")\n",
     "\n",
     "shared_style = Style()\n",
@@ -687,7 +675,7 @@
     "shared_style.labelstyle.scale = 1  \n",
     "shared_style.iconstyle.color = 'ffff0000'  # Blue\n",
     "shared_style.iconstyle.scale = 1\n",
-    "shared_style.iconstyle.icon.href = 'http://maps.google.com/mapfiles/kml/shapes/placemark_circle.png'\n",
+    "shared_style.iconstyle.icon.href = icon\n",
     "\n",
     "for site in Sites:\n",
     "    if not site.value or len(site.value) < 2:\n",
@@ -700,7 +688,7 @@
     "            # convert to real dates\n",
     "            begin = env.epoch + datetime.timedelta(seconds=site.t[i])\n",
     "            end = env.epoch + datetime.timedelta(seconds=site.t[i+1])\n",
-    "            pnt = fol.newpoint(name=site.name, coords=[site.geometry[\"coordinates\"]])           \n",
+    "            pnt = fol.newpoint(name='', coords=[site.geometry[\"coordinates\"]])           \n",
     "            # convert to string\n",
     "            pnt.timespan.begin = begin.isoformat()\n",
     "            pnt.timespan.end = end.isoformat()\n",
@@ -709,8 +697,8 @@
     "            style.labelstyle.color = 'ffffffff'  # White\n",
     "            style.labelstyle.scale = 1  \n",
     "            style.iconstyle.color = 'ffff0000'  # Blue\n",
-    "            style.iconstyle.scale = (value / site.container.capacity) * 3\n",
-    "            style.iconstyle.icon.href = 'http://maps.google.com/mapfiles/kml/shapes/placemark_circle.png'\n",
+    "            style.iconstyle.scale = (value / site.container.capacity) * size\n",
+    "            style.iconstyle.icon.href = icon\n",
     "            pnt.style = style\n",
     "        begin = env.epoch + datetime.timedelta(seconds=site.t[-1])\n",
     "        end = env.epoch + datetime.timedelta(seconds=env.now)\n",
@@ -722,11 +710,10 @@
     "        style = Style()\n",
     "        style.labelstyle.color = 'ffffffff'  # White\n",
     "        style.labelstyle.scale = 1  \n",
-    "        style.iconstyle.color = 'ff00ff00'  # Blue\n",
-    "        style.iconstyle.scale = (site.value[-1] / site.container.capacity) * 3\n",
-    "        style.iconstyle.icon.href = 'http://maps.google.com/mapfiles/kml/shapes/placemark_circle.png'\n",
+    "        style.iconstyle.color = 'ff00ff00'   # Green\n",
+    "        style.iconstyle.scale = (site.value[-1] / site.container.capacity) * size\n",
+    "        style.iconstyle.icon.href = icon\n",
     "        pnt.style = style\n",
-    "        \n",
     "\n",
     "kml.save(\"sharedstyle.kml\")"
    ]
@@ -739,17 +726,10 @@
    "source": [
     "# open the file\n",
     "if platform.system():\n",
-    "    !open ./sharedstyle.kml\n",
+    "    !start ./sharedstyle.kml\n",
     "else:\n",
-    "    !start explorer ./sharedstyle.kml\n"
+    "    !start explorer ./sharedstyle.kml"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
