--- a/Example 21 - Automatically generated sites and activities.ipynb
+++ b/Example 21 - Automatically generated sites and activities.ipynb
@@ -6,16 +6,16 @@
    "source": [
     "# Remaining issues:\n",
     "## Need to haves:\n",
-    "- distance between geometries is in degrees, we need it in meters to determine sailing durations\n",
-    "- need to check resource requests closely to check why sharing ships isn't working yet \n",
-    "- need to add real time (plus a specific starting date)\n",
-    "- need to add logging to Sites to lists volumes at different timesteps (this helps to animate on Google Earth)\n",
-    "- need to add sensitivity to weather (see work Joris den Uijl)\n",
-    "- need to add soil characteristics and turbidity generation (see work Joris den Uijl)\n",
+    "- [solved] distance between geometries is in degrees, we need it in meters to determine sailing durations\n",
+    "- [solved] need to check resource requests closely to check why sharing ships isn't working yet \n",
+    "- [solved] need to add real time (plus a specific starting date)\n",
+    "- [solved] need to add logging to Sites to lists volumes at different timesteps (this helps to animate on Google Earth)\n",
+    "- [open] need to add sensitivity to weather (see work Joris den Uijl)\n",
+    "- [open] need to add soil characteristics and turbidity generation (see work Joris den Uijl)\n",
     "\n",
     "## Nice to haves:\n",
-    "- need to add routing via routing graph (Dijkstra algorithm)\n",
-    "- need to make case handling web based (quick setup & quick case comparison)\n"
+    "- [open] need to add routing via routing graph (Dijkstra algorithm)\n",
+    "- [open] need to make case handling web based (quick setup & quick case comparison)\n"
    ]
   },
   {
